--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,6 +25,24 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'Inter var';
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+  font-named-instance: 'Regular';
+  src: url("/fonts/Inter.var.woff2?v=3.13") format("woff2");
+}
+
+@font-face {
+  font-family: 'Inter var';
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: italic;
+  font-named-instance: 'Italic';
+  src: url("/fonts/Inter.var.woff2?v=3.13") format("woff2");
+}
+
 ::-webkit-scrollbar {
   width: 12px;
 }
@@ -43,10 +61,16 @@
 html {
   overflow-y: auto;
   scroll-behavior: smooth;
+  font-family: 'Inter', sans-serif;
+}
+@supports (font-variation-settings: normal) {
+  html {
+      font-family: 'Inter var', sans-serif;
+ }
 }
 body {
   font: 18px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-family: "SF Pro Text", "Inter-Regular", "Roboto", sans-serif;
+  font-family: "Inter var", "Inter-Regular", "Roboto", sans-serif;
   font-size: 1.2em;
   background-color: var(--main-bg);
   color: var(--main-text);
@@ -56,14 +80,14 @@ small {
 }
 h1, h2, h3, h4, h5, h6 {
   margin: 25px 0 5px 0;
-  letter-spacing: 1px;
+  font-weight: 900;
 }
 p {
   margin: 0 0 15px 0;
 }
 a {
   color: var(--accent-colour);
-  font-weight: bold;
+  font-weight: 900;
   text-decoration: none;
 }
 code {
@@ -156,7 +180,7 @@ input:focus, textarea:focus, a:focus, .btn:focus, select:focus {
   border-radius: var(--card-radius);
   transition: background-color 0.3s ease, outline 0.1s ease;
   outline: solid 0 var(--accent-colour-dim);
-  font-weight: bold;
+  font-weight: 900;
 }
 .btn-danger {
   background-color: var(--card-red);
@@ -184,7 +208,7 @@ input:focus, textarea:focus, a:focus, .btn:focus, select:focus {
 }
 .nav a {
   text-decoration: none;
-  font-weight: bold;
+  font-weight: 900;
   margin: 0 10px 0 10px;
   color: var(--nav-text);
   line-height: 2rem;
@@ -250,7 +274,7 @@ input:focus, textarea:focus, a:focus, .btn:focus, select:focus {
   border-radius: var(--card-radius);
 }
 .card-title {
-  font-weight: bold;
+  font-weight: 900;
   font-size: 1.25em;
   margin: 0 0 5px 0;
 }
@@ -395,18 +419,18 @@ a.card {
 
 /* MISC */
 .item-title {
-  font-weight: bold;
+  font-weight: 900;
 }
 .form-item {
   display: block;
   width: 100%;
   margin-top: 5px;
 }
-.form-group {
-  padding-bottom: 10px;
-}
 #category, #newTicket, button {
   display: inline-block;
+}
+#category {
+  margin-bottom: 10px;
 }
 
 /* RESPONSIVE LAYOUT */
