Add moderation log to privacy policy.
Also stylistic change for tables, and show full date on hovering
durations on tickets.

--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -10,9 +10,9 @@
   <span> &middot; <a href="/privacy">Privacy</a> &middot;
     <a href="/logs">Moderation Log</a></span>
   <p>This website is not affiliated with Heriot-Watt University.</p>
-  <p>{{.SiteTitle}}</a> is
+  <p>{{.SiteTitle}} is
       released under AGPL 3.0. Contribute on <a rel="noopener noreferrer"
-      href="https://github.com/hw-cs-reps/platform">GitHub</a>!</p></p>
+      href="https://github.com/hw-cs-reps/platform">GitHub</a>!</p>
 </div>
 </div>
 </body>
