--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -43,6 +43,23 @@ voter ID.</p>
   <p>Session ID: c2c1390516e18d14</p>
 </div>
 
+<h2>Moderation Log</h2>
+
+<p>Moderative actions are publicly logged and posted on the moderation log
+page. The log entry includes the moderator's name, the action performed, and
+what the content is set to.</p>
+
+<p>Types of actions logged include:</p>
+<ul>
+  <li>Resolving, deleting, or editing a ticket</li>
+  <li>Removing an offending comment on a ticket</li>
+  <li>Posting or editing an announcement</li>
+</ul>
+
+<p>When editing a ticket, the moderator may choose to hide what information was
+edited out. This is to prevent revealing sensitive information, such as a
+user's identity.</p>
+
 <h2>Third Parties</h2>
 <p>There's only one party happening here. No information is shared with third
 parties.</p>
@@ -51,5 +68,5 @@ parties.</p>
 <p>We, the current class representatives, reserve the right to make any changes to this privacy policy. Notice will be
   given as an alert on the <a href="/">homepage</a>.</p>
 
-<p><i>Updated: 10/08/20</i></p>
+<p><i>Updated: Aug 14 2020</i></p>
 {{template "base/footer" .}}
