--- a/public/css/main.css
+++ b/public/css/main.css
@@ -110,6 +110,7 @@ table, th, td {
   border-bottom: 1px solid #bbb;
   border-top: 1px solid #bbb;
   border-collapse: collapse;
+  padding: 4px 8px;
 }
 table {
   border: 1px solid #bbb;
