--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -48,7 +48,7 @@
 	{{range .Ticket.Comments}}
 	<div class="comment">
 		<span id="c-{{.CommentID}}" class="commentInfo">
-      {{.PosterID}} {{ if .IsAdmin}}<span class="badge">Admin</span> {{end}}&middot;
+      {{.PosterID}} {{ if .IsAdmin}}<span class="badge" id="admin">Rep</span> {{end}}&middot;
       <span title="{{DateFull .CreatedUnix}}">{{CalcDurationShort .CreatedUnix}} ago</span>
 			{{if $.IsAdmin }}<form method="post" action="/tickets/{{$.Ticket.TicketID}}/del/{{.CommentID}}" class="lineform">
 				<input type="hidden" name="_csrf" value="{{$.csrf_token}}">
