Allow updating category and log in moderation log.
Also add a reason description on the moderation log.

--- a/templates/moderations.html
+++ b/templates/moderations.html
@@ -23,7 +23,7 @@ automatically.</p>
   {{if .Reason}}
   <tr>
     <td colspan="2"></td>
-    <td>{{.Reason}}</td>
+    <td><b>Reason</b>: {{.Reason}}</td>
   </tr>
   {{end}}
 
