Fix margin for cards.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -273,7 +273,6 @@ input:focus, textarea:focus, a:focus, .btn:focus, select:focus {
   display: block;
   background-color: var(--card-bg);
   border-radius: var(--card-radius);
-  margin-bottom: 20px;
 }
 .card-title {
   font-weight: 900;
@@ -344,6 +343,9 @@ a.card {
 
 
 /* ALERTS */
+.alert {
+  margin-bottom: 20px;
+}
 .alert-green {
   background-color: var(--card-green);
   color: #fff;
